# nadeshiko-dev-tools

./: .env.example  .gitignore  README.md  delete-media.py  pyproject.toml
.claude/skills/: process-media.md
media_sub_splitter/: __main__.py  main.py  uploader_cli.py
media_sub_splitter/utils/: anilist.py  cli.py  config.py  ffmpeg_utils.py  file_utils.py  prompts.py  uploader.py
nadeshiko_dev_tools/: __init__.py  delete_media.py  notify_discord.py  post_upload.py
nadeshiko_dev_tools/assets_uploader/: __init__.py  __main__.py  uploader.py
nadeshiko_dev_tools/common/: __init__.py  anilist.py  archive.py  config.py  cuda_setup.py  discord_audit.py  file_utils.py  progress.py  quality_check.py  timestamps.py  tmdb.py
nadeshiko_dev_tools/media_sub_splitter/: __main__.py  cli.py  main.py
nadeshiko_dev_tools/media_sub_splitter/utils/: audio_utils.py  display_utils.py  ffmpeg_utils.py  prompts.py  subtitle_utils.py  text_utils.py
nadeshiko_dev_tools/migrator/: __main__.py  backfill_segment_index.py  migrator.py
nadeshiko_dev_tools/mora_aligner/: __main__.py  analyzer.py  batch.py  timing.py  visualizer.py
nadeshiko_dev_tools/nsfw_tagger/: __main__.py  batch.py  classifier.py  cli.py  export.py
nadeshiko_dev_tools/pitch_extractor/: __main__.py  batch.py  extractor.py  separator.py
nadeshiko_dev_tools/segment_extractor/: __init__.py  cli.py  splitter.py
nadeshiko_dev_tools/segment_extractor/utils/: __init__.py  subtitle_utils.py  text_utils.py
nadeshiko_dev_tools/tokenizer/: __main__.py  batch.py  cli.py  tokenizer.py
scripts/: backfill_pos_analysis.py  cleanup_previews.py  find_jp_subs.py  find_missing_content_ratings.py  pre-push  remove_media_r2.py  upload-all.sh  upload_all.sh  upload_all_prod.sh
tests/: conftest.py  test_sub_generation.py  test_sync_quality.py  test_text_utils.py
tests/snapshots/: adachi-to-shimamura-S01E01.snapshot.tsv  adachi-to-shimamura-S01E02.snapshot.tsv  adachi-to-shimamura-S01E03.snapshot.tsv  adachi-to-shimamura-S01E04.snapshot.tsv  adachi-to-shimamura-S01E05.snapshot.tsv  adachi-to-shimamura-S01E06.snapshot.tsv  adachi-to-shimamura-S01E07.snapshot.tsv  adachi-to-shimamura-S01E08.snapshot.tsv  adachi-to-shimamura-S01E09.snapshot.tsv  adachi-to-shimamura-S01E10.snapshot.tsv  adachi-to-shimamura-S01E11.snapshot.tsv  adachi-to-shimamura-S01E12.snapshot.tsv  bocchi-the-rock S01E01.snapshot.tsv  bocchi-the-rock S01E02.snapshot.tsv  bocchi-the-rock S01E03.snapshot.tsv  bocchi-the-rock S01E04.snapshot.tsv  bocchi-the-rock S01E05.snapshot.tsv  bocchi-the-rock S01E06.snapshot.tsv  bocchi-the-rock S01E07.snapshot.tsv  bocchi-the-rock S01E08.snapshot.tsv  bocchi-the-rock S01E09.snapshot.tsv  bocchi-the-rock S01E10.snapshot.tsv  bocchi-the-rock S01E11.snapshot.tsv  bocchi-the-rock S01E12.snapshot.tsv  kidou-senshi-gundam-suisei-no-majo S01E00.snapshot.tsv  kidou-senshi-gundam-suisei-no-majo S01E01.snapshot.tsv  kidou-senshi-gundam-suisei-no-majo S01E02.snapshot.tsv  kidou-senshi-gundam-suisei-no-majo S01E03.snapshot.tsv  kidou-senshi-gundam-suisei-no-majo S01E04.snapshot.tsv  kidou-senshi-gundam-suisei-no-majo S01E05.snapshot.tsv  kidou-senshi-gundam-suisei-no-majo S01E06.snapshot.tsv  kidou-senshi-gundam-suisei-no-majo S01E07.snapshot.tsv  kidou-senshi-gundam-suisei-no-majo S01E08.snapshot.tsv  kidou-senshi-gundam-suisei-no-majo S01E09.snapshot.tsv  kidou-senshi-gundam-suisei-no-majo S01E10.snapshot.tsv  kidou-senshi-gundam-suisei-no-majo S01E11.snapshot.tsv  kidou-senshi-gundam-suisei-no-majo S01E12.snapshot.tsv  kidou-senshi-gundam-suisei-no-majo S02E01.snapshot.tsv  kidou-senshi-gundam-suisei-no-majo S02E02.snapshot.tsv  kidou-senshi-gundam-suisei-no-majo S02E03.snapshot.tsv  (+9 more)
tests/snapshots/tmp/: _data.json
